1. Collection API Улучшения[#192235]