@@ -45,20 +45,20 @@ public class DepartmentsTest {
     }
     @Test
     public void whenDescSort() {
-        List<String> input = Arrays.asList("K1/SK1/SSK1",
-                                           "K2/SK1/SSK1",
-                                           "K1/SK2",
-                                           "K2/SK1/SSK2",
-                                           "K1/SK1/SSK2");
-        List<String> expect = Arrays.asList("K2",
-                                            "K2/SK1",
-                                            "K2/SK1/SSK2",
-                                            "K2/SK1/SSK1",
-                                            "K1",
-                                            "K1/SK2",
-                                            "K1/SK1",
-                                            "K1/SK1/SSK2",
-                                            "K1/SK1/SSK1");
+        List<String> input = List.of("K1/SK1/SSK1",
+                                     "K2/SK1/SSK1",
+                                     "K1/SK2",
+                                     "K2/SK1/SSK2",
+                                     "K1/SK1/SSK2");
+        List<String> expect = List.of("K2",
+                                      "K2/SK1",
+                                      "K2/SK1/SSK2",
+                                      "K2/SK1/SSK1",
+                                      "K1",
+                                      "K1/SK2",
+                                      "K1/SK1",
+                                      "K1/SK1/SSK2",
+                                      "K1/SK1/SSK1");
         List<String> result = Departments.fillGaps(input);
         Departments.sortDesc(result);
         assertThat(result, is(expect));
